handle error when user refused the authorization

--- a/MisfitCloudAPIWrapperDemo_iOS/MisfitCloudAPIWrapperDemo_iOS/Base.lproj/Main.storyboard
+++ b/MisfitCloudAPIWrapperDemo_iOS/MisfitCloudAPIWrapperDemo_iOS/Base.lproj/Main.storyboard
@@ -16,8 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ah8-K5-4Ie">
-                                <rect key="frame" x="240" y="399" width="118" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="Ah8-K5-4Ie">
+                                <rect key="frame" x="128" y="399" width="341" height="30"/>
                                 <state key="normal" title="Connect to Misfit">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -149,6 +149,15 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kOj-mo-J5Z">
+                                <rect key="frame" x="350" y="162" width="43" height="30"/>
+                                <state key="normal" title="Graph">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="getData:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="8ua-uy-eq5"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -156,6 +165,7 @@
                             <constraint firstAttribute="centerX" secondItem="WQb-kH-ZQo" secondAttribute="centerX" id="0n1-fh-GS2"/>
                             <constraint firstAttribute="centerX" secondItem="74Q-v3-bYr" secondAttribute="centerX" constant="-72" id="3yT-2e-KXK"/>
                             <constraint firstAttribute="centerX" secondItem="fMd-ry-Di5" secondAttribute="centerX" constant="-16" id="4i4-CS-Yim"/>
+                            <constraint firstAttribute="centerX" secondItem="kOj-mo-J5Z" secondAttribute="centerX" constant="-72" id="C9w-nm-Nt6"/>
                             <constraint firstAttribute="centerX" secondItem="EZB-ci-JRW" secondAttribute="centerX" constant="90" id="LLa-hy-PgW"/>
                             <constraint firstAttribute="centerX" secondItem="fJI-zQ-Vjk" secondAttribute="centerX" constant="88" id="Nla-NG-pze"/>
                             <constraint firstAttribute="centerX" secondItem="76u-fF-D1u" secondAttribute="centerX" constant="-11" id="atR-bf-g3V"/>
